--- a/funkoDjango/mainApp/templates/home.html
+++ b/funkoDjango/mainApp/templates/home.html
@@ -12,12 +12,16 @@
 </head>
 <body>
   <header>
-    <div class="logo">PopVerse</div>
+    <div class="logo"><a href="">PopVerse</b></a></div>
     <nav>
       <a href="" class="active"><b>Home</b></a>
       <a href="shop">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      {% if request.session.username %}
+        <a href="orders">Cart</a>
+        <a href="logout">Logout</a>
+      {% else %}
+        <a href="login">Login</a>
+      {% endif %}
     </nav>
   </header>
 
@@ -33,10 +37,15 @@
       {% for i in 9|range %}
         {% with funko=funkos|index:i %}
           <div class="product-card">
-            <img src="{{ funko.link_image }}" alt="{{ funko.name }}" width = "100" height = "100"/>
+            <a href = "/item?item={{funko.id}}">
+              <img src="{{ funko.link_image }}" alt="{{ funko.name }}" class="product-image" width="100" height="100" />
+            </a>
             <h3>{{ funko.name }}</h3>
             <p>${{ funko.cost }}</p>
-            <button>Add to Cart</button>
+            <form method="POST" action="{% url 'add_to_cart' funko.id %}">
+              {% csrf_token %}
+              <button class="add-to-cart">Add to Cart</button>
+            </form>
           </div>
         {% endwith %}
       {% endfor %}    
