--- a/funkoDjango/mainApp/templates/item.html
+++ b/funkoDjango/mainApp/templates/item.html
@@ -12,12 +12,16 @@
 </head>
 <body>
   <header>
-    <div class="logo">PopVerse</div>
+    <div class="logo"><a href="">PopVerse</b></a></div>
     <nav>
-      <a href="/">Home</a>
-      <a href="/shop" class="active">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="" class="active"><b>Home</b></a>
+      <a href="shop">Shop</a>
+      {% if request.session.username %}
+        <a href="orders">Cart</a>
+        <a href="logout">logout</a>
+      {% else %}
+        <a href="login">Login</a>
+      {% endif %}
     </nav>
   </header>
 
@@ -70,7 +74,10 @@
           <input type="number" id="quantity" value="1" min="1" max="10">
           <button class="quantity-btn" onclick="incrementQuantity()">+</button>
         </div>
-        <button class="add-to-cart">Add to Cart</button>
+        <form method="POST" action="{% url 'add_to_cart' funko.id %}">
+          {% csrf_token %}
+          <button class="add-to-cart">Add to Cart</button>
+        </form>
         <button class="add-to-wishlist">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
@@ -274,7 +281,9 @@
     <div class="product-grid">
       {% for funko in related_funkos %}
           <div class="product-card">
-            <img src="{{ funko.link_image }}" alt="{{ funko.name }}" class="product-image" width="100" height="100" />
+            <a href = "/item?item={{funko.id}}">
+              <img src="{{ funko.link_image }}" alt="{{ funko.name }}" class="product-image" width="100" height="100" />
+            </a>
             <h3>{{ funko.name }}</h3>
             <p>${{ funko.cost }}</p>
             <div class="product-meta">
@@ -283,7 +292,11 @@
                 <span class="product-exclusive">Exclusive</span>
               {% endif %}
             </div>
-            <button>Add to Cart</button>
+            <form method="POST" action="{% url 'add_to_cart' funko.id %}">
+              {% csrf_token %}
+              <button class="add-to-cart">Add to Cart</button>
+            </form>
+
           </div>
       {% endfor %}    
     </div>
