--- a/funkoDjango/mainApp/static/css/style.css
+++ b/funkoDjango/mainApp/static/css/style.css
@@ -75,9 +75,9 @@ nav a {
 
 .product-card {
   background: white;
-  padding: 50px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 290px;
 }
 
 
