--- a/funkoDjango/mainApp/templates/login.html
+++ b/funkoDjango/mainApp/templates/login.html
@@ -63,7 +63,7 @@
               <input type="checkbox" name="remember">
               <span>Remember me</span>
             </label>
-            <a href="/forgot-password" class="forgot-password">Forgot password?</a>
+            <!-- <a href="/forgot-password" class="forgot-password">Forgot password?</a> -->
           </div>
           
           <button type="submit" class="auth-button">Sign In</button>
@@ -142,8 +142,6 @@
           <ul>
             <li>Track your orders</li>
             <li>Save your favorite items</li>
-            <li>Receive exclusive offers</li>
-            <li>Get early access to new releases</li>
           </ul>
           <div class="auth-promo-image">
             <img src="{% static 'images/funko-collection.png' %}" alt="Funko Pop Collection" onerror="this.src='/api/placeholder/300/200'; this.onerror=null;">
