--- a/funkoDjango/mainApp/templates/login.html
+++ b/funkoDjango/mainApp/templates/login.html
@@ -17,6 +17,7 @@
       <a href="shop">Shop</a>
       {% if request.session.username %}
         <a href="orders">Orders</a>
+        <a href="wishlist">Wishlist</a>
         <a href="logout">logout</a>
       {% else %}
         <a href="login">login</a>
