--- a/funkoDjango/mainApp/templates/shop.html
+++ b/funkoDjango/mainApp/templates/shop.html
@@ -17,6 +17,8 @@
       <a href="shop" class = "active">Shop</a>
       {% if request.session.username %}
         <a href="orders">Cart</a>
+        <a href="wishlist">Wishlist</a>
+
         <a href="logout">Logout</a>
       {% else %}
         <a href="login">Login</a>
