--- a/funkoDjango/mainApp/templates/cart.html
+++ b/funkoDjango/mainApp/templates/cart.html
@@ -17,6 +17,7 @@
       <a href="shop">Shop</a>
       {% if request.session.username %}
         <a href="cart" class="active">Cart</a>
+        <a href="wishlist">Wishlist</a>
         <a href="logout">Logout</a>
       {% else %}
         <a href="login">Login</a>
