--- a/funkoDjango/mainApp/templates/item.html
+++ b/funkoDjango/mainApp/templates/item.html
@@ -30,7 +30,7 @@
   <div class="breadcrumb">
     <a href="/">Home</a> &gt; 
     <a href="/shop">Shop</a> &gt; 
-    <a href="/shop/{{ funko.category|lower }}">{{ funko.category }}</a> &gt; 
+    <a href="/shop">{{ funko.category }}</a> &gt; 
     <span>{{ funko.name }}</span>
   </div>
 
